--- a/auth-client/src/main/resources/application.yml
+++ b/auth-client/src/main/resources/application.yml
@@ -1,18 +1,27 @@
 server:
-  port: 8082
+  port: 8099
 spring:
   security:
     oauth2:
       client:
-        provider:
-          spring:
-            issuer-uri: http://localhost:8080
         registration:
-          spring:
+          api-client:
             provider: spring
             client-id: dni
             client-secret: dni
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_basic
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            scope: user.read,openid
+            scope: openid
+            client-name: api-client
+          api-client-authorization:
+            provider: spring
+            client-id: dni
+            client-secret: dni
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/authorized"
+            scope: user.read
+            client-name: api-client-authorization
+        provider:
+          spring:
+            issuer-uri: http://localhost:9000
