--- a/auth-client/src/main/resources/application.yml
+++ b/auth-client/src/main/resources/application.yml
@@ -1,16 +1,15 @@
 server:
-  port: 8099
+  port: 8080
 spring:
   security:
     oauth2:
       client:
         registration:
-          api-client:
+          api-client-oidc:
             provider: spring
             client-id: dni
             client-secret: dni
             authorization-grant-type: authorization_code
-            client-authentication-method: client_secret_basic
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             scope: openid
             client-name: api-client
@@ -24,4 +23,6 @@ spring:
             client-name: api-client-authorization
         provider:
           spring:
-            issuer-uri: http://localhost:9000
+            authorization-uri: http://localhost:9000/oauth2/authorize
+            token-uri: http://localhost:9000/oauth2/token
+#            issuer-uri: http://localhost:9000
